# QTrading.Cpp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
QTrading.DataPreprocess/src/: CMakeLists.txt
QTrading.DataPreprocess/src/Aggregator/: BinanceHourAggregator.cpp
QTrading.DataPreprocess/src/Simulator/: Binance.cpp
QTrading.DataPreprocess/tests/: CMakeLists.txt
QTrading.DataPreprocess/tests/Aggregator/: BinanceHourAggregatorTests.cpp
QTrading.Execution/: CMakeLists.txt
QTrading.Execution/include/Execution/: CarryPairImbalanceCoordinator.hpp  ExecutionOrchestrator.hpp  ExecutionOrder.hpp  ExecutionParentOrder.hpp  ExecutionSignal.hpp  FundingCarryExchangeGateway.hpp  FundingCarryExecutionOrchestrator.hpp  FundingCarryStrategy.hpp  IExecutionEngine.hpp  IExecutionPolicy.hpp  IExecutionScheduler.hpp  IPairCoordinator.hpp  LiquidityAwareExecutionScheduler.hpp  MarketExecutionEngine.hpp
QTrading.Execution/src/: CarryPairImbalanceCoordinator.cpp  ExecutionModule.cpp  ExecutionOrchestrator.cpp  FundingCarryExchangeGateway.cpp  FundingCarryExecutionOrchestrator.cpp  FundingCarryStrategy.cpp  LiquidityAwareExecutionScheduler.cpp  MarketExecutionEngine.cpp
QTrading.Execution/tests/: CMakeLists.txt  CarryPairImbalanceCoordinatorTests.cpp  ExecutionOrchestratorTests.cpp  FundingCarryExecutionOrchestratorTests.cpp  LiquidityAwareExecutionSchedulerTests.cpp  MarketExecutionEngineTests.cpp
QTrading.Infra/: CMakeLists.txt
QTrading.Infra/include/DataManager/: IDataManager.hpp
QTrading.Infra/include/Dto/: AccountLog.hpp  Order.hpp  Position.hpp
QTrading.Infra/include/Exanges/: IDataFeed.h  IExchange.h
QTrading.Infra/include/Exchanges/: IExchange.h
QTrading.Infra/include/Logging/: AccountEventBuffer.hpp  FundingEventBuffer.hpp  MarketEventBuffer.hpp  OrderEventBuffer.hpp  PositionEventBuffer.hpp  StepLogContext.hpp
QTrading.Infra/include/Observability/: StepLogContext.hpp
QTrading.Infra/include/data_manager/: i_data_manager.h
QTrading.Infra/include/dto/: order.h  position.h
QTrading.Infra/include/exanges/: i_data_feed.h
QTrading.Infra/src/: CMakeLists.txt
QTrading.Infra/tests/: BaselineSemanticsInputPinning.hpp  BinanceExchangeSkeletonTests.cpp  CMakeLists.txt  FeatherRoundTripFixture.hpp  InfraLogFeatherRoundTripTests.cpp  InfraLogTestFixture.hpp  InfraLogTests.cpp  ReplaySemanticsInputPinning.hpp
QTrading.Intent/: CMakeLists.txt
QTrading.Intent/include/Intent/: BasisArbitrageIntentBuilder.hpp  BasisIntentBuilder.hpp  CarryBasisHybridIntentBuilder.hpp  FundingCarryIntentBuilder.hpp  IIntentBuilder.hpp  PairTradeIntentSupport.hpp  TradeIntent.hpp
QTrading.Intent/src/: BasisArbitrageIntentBuilder.cpp  BasisIntentBuilder.cpp  CarryBasisHybridIntentBuilder.cpp  FundingCarryIntentBuilder.cpp  IntentModule.cpp  PairTradeIntentSupport.cpp
QTrading.Intent/tests/: BasisArbitrageIntentBuilderTests.cpp  BasisIntentBuilderTests.cpp  CMakeLists.txt  FundingCarryIntentBuilderTests.cpp
QTrading.Logging/: CMakeLists.txt
QTrading.Logging/include/: FileLogger.hpp  InMemorySink.hpp  LogPayload.hpp  LogSink.hpp  Logger.hpp  LoggerBootstrap.hpp  SinkLogger.hpp
QTrading.Logging/include/Enum/: LogModule.hpp
QTrading.Logging/include/FileLogger/: FeatherV2.hpp  FeatherV2Sink.hpp
QTrading.Logging/src/: CMakeLists.txt  FileLogger.cpp  Logger.cpp  LoggerBootstrap.cpp  SinkLogger.cpp
QTrading.Logging/src/FileLogger/: FeatherV2.cpp  FeatherV2Sink.cpp
QTrading.Logging/tests/: CMakeLists.txt  FileLoggerTests.cpp
QTrading.Logging/tests/FileLogger/: FeatherV2Tests.cpp
QTrading.Monitoring/: CMakeLists.txt
QTrading.Monitoring/include/Monitoring/: IMonitoring.hpp  MonitoringAlert.hpp  SimpleMonitoring.hpp
QTrading.Monitoring/src/: MonitoringModule.cpp  SimpleMonitoring.cpp
QTrading.Monitoring/tests/: CMakeLists.txt  SimpleMonitoringTests.cpp
QTrading.Risk/: CMakeLists.txt
QTrading.Risk/include/Risk/: AccountState.hpp  IRiskEngine.hpp  RiskTarget.hpp  SimpleRiskEngine.hpp
QTrading.Risk/src/: RiskModule.cpp  SimpleRiskEngine.cpp
QTrading.Risk/tests/: CMakeLists.txt  SimpleRiskEngineTests.cpp
QTrading.Service/: CMakeLists.txt  DatasetUniverseConfig.cpp  DatasetUniverseConfig.hpp  QTrading.Service.cpp  QTrading.Service.h  ServiceHelpers.cpp  ServiceHelpers.hpp
QTrading.Service/Builder/: StrategyModuleBuilder.cpp  StrategyModuleBuilder.hpp
QTrading.Signal/: CMakeLists.txt
QTrading.Signal/include/Signal/: BasisArbitrageSignalEngine.hpp  BasisSignalEngine.hpp  CarryBasisHybridSignalEngine.hpp  FundingCarrySignalEngine.hpp  ISignalEngine.hpp  PairMarketSignalSupport.hpp  SignalDecision.hpp
QTrading.Signal/src/: BasisArbitrageSignalEngine.cpp  BasisSignalEngine.cpp  CarryBasisHybridSignalEngine.cpp  FundingCarrySignalEngine.cpp  PairMarketSignalSupport.cpp  SignalModule.cpp
QTrading.Signal/tests/: BasisArbitrageSignalEngineTests.cpp  BasisSignalEngineTests.cpp  CMakeLists.txt  FundingCarrySignalEngineTests.cpp
QTrading.Strategy/: CMakeLists.txt
QTrading.Strategy/include/: IStrategy.hpp
QTrading.Strategy/include/Strategy/: BasisArbitrageMultiPairRuntime.hpp  CarryBasisHybridMultiPairRuntime.hpp  FundingCarryStrategyGateway.hpp  FundingCarryStrategyRuntime.hpp  IStrategyRuntime.hpp  StrategyConfigLoader.hpp  StrategyModuleBuilder.hpp
QTrading.Strategy/include/Trend/: UTBotStrategy.hpp
QTrading.Strategy/src/: BasisArbitrageMultiPairRuntime.cpp  CMakeLists.txt  CarryBasisHybridMultiPairRuntime.cpp  FundingCarryStrategyGateway.cpp  FundingCarryStrategyRuntime.cpp  StrategyConfigLoader.cpp  StrategyModuleBuilder.cpp
QTrading.Strategy/src/Trend/: UTBotStrategy.cpp
QTrading.Universe/: CMakeLists.txt
QTrading.Universe/include/Universe/: FixedUniverseSelector.hpp  IUniverseSelector.hpp  UniverseSelection.hpp
QTrading.Universe/src/: FixedUniverseSelector.cpp  UniverseModule.cpp
QTrading.Universe/tests/: CMakeLists.txt  UniverseTests.cpp
QTrading.Utils/: CMakeLists.txt
QTrading.Utils/include/: Global.hpp
QTrading.Utils/include/Calibration/: CalibrationMetrics.hpp
QTrading.Utils/tests/: CMakeLists.txt
(+262 files in other folders)
