add_executable(QTrading.Infra.Tests
  InfraLogFeatherRoundTripTests.cpp
  InfraLogTests.cpp
  Exchanges/BinanceSimulator/DataProvider/MarketDataTests.cpp
  Exchanges/BinanceSimulator/DataProvider/FundingRateDataTests.cpp
  Exchanges/BinanceSimulator/Account/AccountTests.cpp
  Exchanges/BinanceSimulator/Account/AccountCoreV2Tests.cpp
  Exchanges/BinanceSimulator/Account/AccountServicesPhase3Tests.cpp
  Exchanges/BinanceSimulator/Account/AccountPolicyInjectionTests.cpp
  Exchanges/BinanceSimulator/Calibration/CalibrationMetricsTests.cpp
  Exchanges/BinanceSimulator/BinanceExchangeLogTests.cpp
  Exchanges/BinanceSimulator/BinanceExchangeTests.cpp
  Exchanges/BinanceSimulator/PerformanceGuardrailTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/DiagnosticReportFormatterTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/PerformanceCiGateTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/PerformanceEvidenceFormatterTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/DifferentialReplayRunnerTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/LegacyLogRowCompareTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/ReplayCompareCiGateTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/ReplayCompareTestHarnessTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/StepCompareModelTests.cpp
  Exchanges/BinanceSimulator/Diagnostics/Compare/V2ReplayScenarioPackTests.cpp
  Exchanges/BinanceSimulator/Observability/CompareNamespaceAliasTests.cpp
)

target_include_directories(QTrading.Infra.Tests
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../QTrading.Logging/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../QTrading.Utils/include
)

target_link_libraries(QTrading.Infra.Tests
  PRIVATE
    QTrading.Infra.Library
    QTrading.Logging.Library
    Boost::filesystem
    GTest::gtest
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(QTrading.Infra.Tests)
